Revert "Task #372 add a vertical scrollbar for the database page"
This reverts commit 58c9f0d0b312dde1c0e61aa84cc906867f8dbde2.

--- a/web-scraping-electron-app/src/frontend/components/templates/database.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/database.html
@@ -22,7 +22,7 @@
 </style>
 <div id="database-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Database Information</h1>
-    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="white-space: pre-wrap; overflow: auto; max-height: 500px;">
+    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="white-space: pre-wrap; overflow: hidden; max-height: 500px; overflow-y: auto; ">
         <!-- website information will be added here -->
     </pre>
 </div>
